--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/c17hawke/anaconda3/envs/wineq/bin/python"
+    "python.pythonPath": "C:\\Users\\kulkarna4029\\Anaconda3\\python.exe"
 }
