--- a/params.yaml
+++ b/params.yaml
@@ -1,10 +1,11 @@
 base:
   project: winequality-project
   random_state: 42
-  target_col: TARGET
+  target_col: quality
 
 data_source:
   s3_source: data_given/winequality.csv
+  
 
 load_data:
   raw_dataset_csv: data/raw/winequality.csv
@@ -17,10 +18,10 @@ split_data:
 estimators:
   ElasticNet:
     params:
-      # alpha: 0.88
-      # l1_ratio: 0.89
-      alpha: 0.9
+      alpha: 0.7
       l1_ratio: 0.4
+      # alpha: 0.9
+      # l1_ratio: 0.4
 model_dir: saved_models
 
 reports:
